--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "endpointsMock.js",
   "dependencies": {
     "express": "^4.16.3",
+    "moment": "^2.22.2",
     "mongodb": "^3.1.3",
     "sha256": "^0.2.0"
   },
